# realm

./: Cargo.toml  README.ja.md  README.md  demo.mov  demo.tape  flake.nix  install.sh  realm
.claude/commands/: create-pr.md
.github/workflows/: ci.yml  release.yml
docs/: demo.tape
src/: config.rs  docker.rs  git.rs  main.rs  overlay.rs  session.rs  tui.rs
